--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/pg": "^8.15.4",
     "bcryptjs": "^3.0.2",
     "cookie": "^1.0.2",
+    "jose": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.525.0",
     "next": "15.4.10",
